<resources>
    <string name="app_name">CoffeeBooking-app</string>
    <string name="q1">What kind of coffee?</string>
    <string name="q1_a1">Latte</string>
    <string name="q1_a2">Cappuccino</string>
    <string name="q1_a3">Espresso</string>
    <string name="q2">What else do you like in your coffee?</string>
    <string name="q2_a1">Sugar</string>
    <string name="q2_a2">Cream</string>
    <string name="pay">Pay</string>
    <string name="please_chosse">Please chosse</string>
</resources>
